--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,11 @@
-name: Build native image
+name: Release
 on:
   push:
-    paths:
-      - src
-      - project.clj
-      - reflection.json
-  pull_request:
-    paths:
-      - src
-      - project.clj
-      - reflection.json
+    tags:
+      - '*.*.*'
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -48,3 +41,24 @@ jobs:
           --static \
           -J-Xms2g \
           -J-Xmx4g
+        zip --junk-paths ye-linux-amd64 ye
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./ye-linux-amd64.zip
+        asset_name: ye-linux-amd64.zip
+        asset_content_type: application/zip
