--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,28 +15,26 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        echo "Build docker image"
-        docker build -t ye .
+        docker build -t ye . GRAALVM_VERSION=${GRAALVM_VERSION}
+      env:
+        GRAALVM_VERSION: "19.3.0"
     - name: login to GitHub package registry
       run: |
-        echo "Login to GitHub package registry"
-        echo ${GITHUB_TOKEN} | docker login docker.pkg.github.com --username rinx --password-stdin
+        echo ${GITHUB_TOKEN} | docker login docker.pkg.github.com --username ${GITHUB_USER} --password-stdin
       env:
+        GITHUB_UESR: ${{ secrets.YE_USER }}
         GITHUB_TOKEN: ${{ secrets.YE_TOKEN }}
     - name: tag and push to GitHub package registry
       run: |
-        echo "Push to GitHub package registry"
         docker tag ye docker.pkg.github.com/rinx/ye/ye:latest
         docker push docker.pkg.github.com/rinx/ye/ye:latest
     - name: login to DockerHub
       run: |
-        echo "Login to DockerHub"
         echo ${DOCKERHUB_PASS} | docker login --username ${DOCKERHUB_USER} --password-stdin
       env:
         DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
         DOCKERHUB_PASS: ${{ secrets.DOCKERHUB_PASS }}
     - name: tag and push to DockerHub
       run: |
-        echo "Push to DockerHub"
         docker tag ye rinx/ye:latest
         docker push rinx/ye:latest
