--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,36 +11,18 @@ jobs:
     - uses: actions/checkout@v1
     - uses: DeLaGuardo/setup-graalvm@1.0
       with:
-        graalvm-version: '19.2.1'
+        graalvm-version: '19.3.0'
     - name: Install dependencies
       run: |
-        echo "Install dependencies"
         gu install native-image
         curl -o lein https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
         chmod a+x lein
     - name: Build uberjar
       run: |
-        echo "Build uberjar"
         ./lein uberjar
     - name: Build native image
       run: |
-        echo "Build native image"
-        native-image \
-          -jar target/ye-0.1.0-SNAPSHOT-standalone.jar \
-          -H:Name=ye \
-          -H:+ReportExceptionStackTraces \
-          -J-Dclojure.spec.skip-macros=true \
-          -J-Dclojure.compiler.direct-linking=true \
-          -H:Log=registerResource: \
-          -H:ReflectionConfigurationFiles=reflection.json \
-          --verbose \
-          --no-fallback \
-          --no-server \
-          --report-unsupported-elements-at-runtime \
-          --initialize-at-build-time \
-          --static \
-          -J-Xms2g \
-          -J-Xmx4g
+        make
         zip --junk-paths ye-linux-amd64 ye
     - name: Create Release
       id: create_release
