--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,9 +15,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        docker build -t ye . GRAALVM_VERSION=${GRAALVM_VERSION}
+        docker build -t ye . --build-args GRAALVM_VERSION=${GRAALVM_VERSION}
       env:
-        GRAALVM_VERSION: "19.3.0"
+        GRAALVM_VERSION: "19.3.0-java11"
     - name: login to GitHub package registry
       run: |
         echo ${GITHUB_TOKEN} | docker login docker.pkg.github.com --username ${GITHUB_USER} --password-stdin
