--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: |
-        docker build -t ye . --build-args GRAALVM_VERSION=${GRAALVM_VERSION}
+        docker build -t ye . --build-arg GRAALVM_VERSION=${GRAALVM_VERSION}
       env:
         GRAALVM_VERSION: "19.3.0-java11"
     - name: login to GitHub package registry
