--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: jskov/setup-graalvm-linux@19.3.0
+    - uses: rinx/setup-graalvm-ce@v0.0.1
+      with:
+        graalvm-version: "19.3.0"
+        java-version: "java8"
     - name: Install dependencies
       run: |
         gu install native-image
